responsive work pt4, form overflow fix

--- a/src/styles/layout/_dashboard.scss
+++ b/src/styles/layout/_dashboard.scss
@@ -155,6 +155,7 @@
       grid-template-rows: repeat(auto-fit,minmax(7rem,10rem));
       padding: 0 2.5rem;
     }
+    @media only screen and (max-width: abs.$bp-small){padding: 0 1rem;}
     &-item{
       padding: 0 2rem;
       width: 100%;
@@ -167,40 +168,47 @@
       border-radius: 1rem;
       @media only screen and (max-width: abs.$bp-large){padding: 1rem;}
       @media only screen and (max-width: abs.$bp-medium){
-        grid-template-columns: repeat(4,1fr);
+        grid-template-columns: repeat(2,1fr) repeat(2,min-content);
         grid-template-rows: repeat(2,min-content);
-        grid-row-gap: 1rem;
+        grid-gap: 1rem;
         align-content: center;
+        padding: 0 1rem;
       }
       & span{
         font-size: 1.6rem;
         @media only screen and(max-width: abs.$bp-largest){font-size: 1.3rem}
+        @media only screen and (max-width: abs.$bp-small){font-size: 1.1rem;}
       }
     }
   }
 
   &__form {
     z-index: 1;
-    overflow-y: scroll;
     position: absolute;
     top: 0;
     left: 12rem;
     min-width: 50vw;
-    height: 100%;
-    padding: 5rem 2vw;
+    padding: 2.5rem 2vw;
     display: grid;
     grid-template-rows: repeat(4,min-content);
     gap: 5rem;
-    align-content: center;
     background-color: abs.$color-vulcan;
     box-shadow: .25rem 0 2.5rem .25rem #141625;
     transition: all .5s ease-in-out;
+
+    &, &-items-container{
+      height: 100%;
+      overflow-y: auto;
+      &::-webkit-scrollbar {width: .75rem;}
+      &::-webkit-scrollbar-track {background: abs.$color-darkblue;  border-radius: 1rem;}
+      &::-webkit-scrollbar-thumb {background: abs.$color-purple--light; border-radius: 1rem;}
+      &::-webkit-scrollbar-thumb:hover {background: abs.$color-white-gray;}
+    }
 
     @media only screen and (max-width: abs.$bp-large){
       top: 10rem;
       left: 0;
       width: 100%;
-      height: calc(100% - 10rem);
       gap: 2.5rem;
       padding: 1.5rem 2rem;
     }
@@ -211,6 +219,7 @@
       & .heading-4{grid-column: 1 / -1;}
       & input, & textarea{
         height: 5rem;
+        width: 100%;
         border-radius: .5rem;
         font-size: 1.6rem;
         text-align: center;
@@ -218,10 +227,6 @@
         background-color: abs.$color-white;
         border: none;
         outline: none;
-        @media only screen and (max-width: abs.$bp-large){
-          height: 3.5rem;
-          font-size: 1.4rem;
-        }
       }
     }
     &-details{
@@ -241,21 +246,24 @@
     }
     &-date{grid-template-rows: repeat(2,min-content);}
     &-items{
-      max-width: 100%;
-      grid-template-rows: repeat(3,min-content);
-      &-item{
-        width: 100%;
+      grid-template-rows: repeat(2,min-content) 12.5rem;
+      &-container{
+        padding: 0 .5rem;
         display: grid;
-        grid-template-columns: repeat(3,1fr) min-content;
-        align-items: center;
+        grid-auto-rows: 5rem;
         gap: 1rem;
-        & svg{
-          width: 2.5rem;
-          height: 2.5rem;
-          fill: abs.$color-white;
-        }
-        & input{
+        &-item{
           width: 100%;
+          display: grid;
+          grid-template-columns: repeat(3,1fr) min-content;
+          align-items: center;
+          gap: 1rem;
+          & svg{
+            cursor: pointer;
+            width: 2.5rem;
+            height: 2.5rem;
+            fill: abs.$color-white;
+          }
         }
       }
     }
